// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TimePicker should be rendered correctly 1`] = `
<div
  className="container uui-input-box -clickable colorSky root size-36 mode-form dateInput"
  onBlur={[Function]}
  onClick={null}
  onFocus={[Function]}
  tabIndex={-1}
>
  <input
    className="uui-input line-height-18 font-size-14 v-padding-8"
    onChange={[Function]}
    onKeyDown={[Function]}
    placeholder="hh:mm A"
    type="text"
    value="01:01 AM"
  />
  <div
    className="container uui-icon uui-enabled -clickable uui-icon-cancel -clickable"
    onClick={[Function]}
    style={Object {}}
  >
    <svg
      className=""
    />
  </div>
</div>
`;

exports[`TimePicker should be rendered correctly with extra props 1`] = `
<div
  className="container uui-input-box uui-disabled colorSky root size-36 mode-form dateInput"
  onBlur={[Function]}
  onClick={null}
  onFocus={[Function]}
  tabIndex={-1}
>
  <input
    aria-disabled={true}
    className="uui-input line-height-18 font-size-14 v-padding-8"
    disabled={true}
    onChange={[Function]}
    onKeyDown={[Function]}
    placeholder="HH:mm"
    type="text"
    value="01:01"
  />
</div>
`;
